--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,47 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      RodovIA
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <strong>Aceleração nos eixos:</strong>
+  <p> X: {{ accelValueX }} </p>
+  <p> Y: {{ accelValueY }} </p>
+  <p> Z: {{ accelValueZ }} m/s^2 / 9,80665 </p>
+  <strong>Dados do GeoRef:</strong>
+  <p> Longitude: {{ long }} </p>
+  <p> Latitude: {{ lat }} </p>
+  <p> Precisão do GPS: {{ acc }} </p>
+  <p> Altitude: {{ altitude }} </p>
+  <p> Precisão da altitude: {{ altitudeAcc }} </p>
+  <p> Velocidade: {{ speed }} m/s  </p>
+  <strong>Dados Direção:</strong>
+  <p> Direção: {{ heading }} </p>
+  <strong>Dados giroscópio:</strong>
+  <p> X: {{ orientationX }} </p>
+  <p> Y: {{ orientationY }} </p>
+  <p> Z: {{ orientationZ }} </p>
+   <!-- <ion-card>
+    <ion-card-header>
+      Bar Chart
+    </ion-card-header>
+    <ion-card-content>
+      <canvas #barCanvas></canvas>
+    </ion-card-content>
+  </ion-card> -->
+  <ion-card>
+    <ion-card-header>
+      Última gravação em banco
+    </ion-card-header>
+    <ion-card-content>
+      <p> Última gravação em banco:</p>
+      <p> AceleraçãoZ: {{ lastInsertion.zaxisaccel }} , Horário:{{ lastInsertion.date }} </p>
+    </ion-card-content>
+  </ion-card> 
+
+   <button ion-button round (click)="clicked()">Exportar Banco de dados</button>  
+
 </ion-content>
