background,ptype,botoes liga e desliga conexao
Agora ele roda em segundo plano, tem botoes para iniciar e parar transmissao de dados via websocket, usa uma propriedade chamada ptype dentro do json que trafega entre app e servidor para que ambos saibam identificar o proposito da mensagem e a partir disso tomar a atitude correta. Proxima implementacao sera algum tipo de identificador de sessao para facilitar queries no banco (servidor retorna um id aleatorio que o usuario guarda para posteriores consultas no banco).

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,16 +25,9 @@
   <p> Y: {{ orientationY }} </p>
   <p> Z: {{ orientationZ }} </p>
 
-  <ion-card>
-    <ion-card-header>
-      Última gravação em banco
-    </ion-card-header>
-    <ion-card-content>
-      <p> Última gravação em banco:</p>
-      <p> AceleraçãoZ: {{ lastInsertion.zaxisaccel }} , Horário:{{ lastInsertion.date }} </p>
-    </ion-card-content>
-  </ion-card> 
 
-   <button ion-button round (click)="clicked()">Exportar Banco de dados</button>  
+
+   <button ion-button round (click)="connectWebsocket()">Transmitir dados</button> 
+   <button ion-button round (click)="closeWebsocket()">Encerrar Transmissão</button> 
 
 </ion-content>
