Copiar Run ID e Generic Toast

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,5 +32,6 @@
 
    <button ion-button round (click)="connectWebsocket()">Transmitir dados</button> 
    <button ion-button round (click)="closeWebsocket()">Encerrar Transmissão</button> 
+   <button ion-button round (click)="copySessionRunIds()">Copiar RunId's</button> 
 
 </ion-content>
