--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,6 +32,7 @@
 
    <button ion-button round (click)="connectWebsocket()">Transmitir dados</button> 
    <button ion-button round (click)="closeWebsocket()">Encerrar Transmissão</button> 
+   <button ion-button round (click)="selectGeral()">Query Sqlite</button> 
    <button ion-button round (click)="copySessionRunIds()">Copiar RunId's</button> 
 
 </ion-content>
