Mudança para upload tardio de dados

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,9 +30,10 @@
  </div>
 
 
-   <button ion-button round (click)="connectWebsocket()">Transmitir dados</button> 
-   <button ion-button round (click)="closeWebsocket()">Encerrar Transmissão</button> 
-   <button ion-button round (click)="selectGeral()">Query Sqlite</button> 
-   <button ion-button round (click)="copySessionRunIds()">Copiar RunId's</button> 
+   <button ion-button round (click)="connectWebsocket()">Conectar ao Servidor</button> 
+   <button ion-button round (click)="closeWebsocket()">Desconectar do Servidor</button> 
+   <button ion-button round (click)="subirDados()">Subir Dados</button>
+   <button ion-button round (click)="apagarBaseLocal()">Apagar Base Local</button> 
+   <!-- <button ion-button round (click)="copySessionRunIds()">Copiar RunId's</button>  -->
 
 </ion-content>
